[project]
name = "rl-supermario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pip==22.3.1",
    "torch==2.0.0",
    "torchvision",
    "setuptools==65.5.0",
    "wheel==0.38.0",
    "tensorboard",
    "six",
    "protobuf==3.20.3",  # 为了解决tensorboard运行问题
    "icecream",
    "imageio",
    "opencv-python",
    "nes_py==8.2.1",
    "numpy==1.24.4",
    "shimmy>=2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true